text overflow fixed on cards

--- a/static/style.css
+++ b/static/style.css
@@ -47,3 +47,7 @@ div.modal-body {
     background-image: url("img/swirl_pattern.png");
 }
 
+.cards {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
